# arrow-utils

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  arrow-utils.cabal  cabal.project.8.10.7.freeze  cabal.project.8.8.4.freeze  cabal.project.9.10.1.freeze  cabal.project.9.4.8.freeze  stack.8.10.7.yaml  stack.8.8.4.yaml  stack.yaml  travis-build.sh
.github/workflows/: ci.yml
src/Control/Arrow/: Utils.hs
test/: Main.hs
