cabal-version:      >=1.10
name:               arrow-utils
version:            0.1.2
synopsis: functions for working with arrows
description:
 arrow-utils provides useful functions and type classes for working with arrows. It provides functions similar to sequenceA.


license:            BSD3
license-file:       LICENSE
author:             Miguel Negrão
maintainer:         miguel.negrao@friendlyvirus.org
homepage:           https://github.com/miguel-negrao/arrow-utils
category:           Arrows, Control, Combinators
build-type:         Simple
extra-source-files: CHANGELOG.md
tested-with: GHC == 8.8.4, GHC == 8.10.7, GHC == 9.4.8, GHC == 9.10.1

library
    exposed-modules:
        Control.Arrow.Utils
    other-extensions:
        Arrows
    build-depends:
          base  >= 4.13.0 && < 5
        , vector-sized >= 1.5.0 && < 1.7
    hs-source-dirs:   src
    default-language: Haskell2010


test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
      base  >= 4.13.0 && < 5
    , arrow-utils
    , test-framework == 0.8.*
    , test-framework-quickcheck2 == 0.3.*
    , QuickCheck >= 2.13.0 && < 2.16
    
  default-language:    Haskell2010
